--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: libminer
-Title: What the Package Does (One Line, Title Case)
+Title: Explore R Libraries
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Caitlin", "Kennedy", , "mhy5@cdc.gov", role = c("aut", "cre"))
+Description: Provides funcions for learninga  about you r libraries and the packages they contain. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
